k8s/notebook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notebook
spec:
  selector:
    matchLabels:
      app: notebook
  template:
    metadata:
      labels:
        app: notebook
    spec:
      containers:
        - name: notebook
          image: notebook:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: notebook-code
              mountPath: /notebook
      volumes:
        - name: notebook-code
          persistentVolumeClaim:
            claimName: notebook-pvc
