k8s/notebook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notebook
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: notebook
